recursion.lessons.recursion.koch.Koch.scala.error
Koch:17: error: not found: value snowside
		snowside(levels-1,length/3);
                ^Koch:20: error: not found: value snowside
		snowside(levels-1,length/3);
                ^Koch:23: error: not found: value snowside
		snowside(levels-1,length/3);
                ^